Fix parallaxed image wrong position bug on page refresh

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #D9AFD9;
+background-image: linear-gradient(180deg, #D9AFD9 0%, #97D9E1 100%);
 }
 
 code {
